feat: add docker and railway deployment configuration